オーバーレイを削除

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- TopVisual -->
-    <section class="TopVisual">
+    <div class="TopVisual">
       <div class="TopVisual__inner">
         <h1>DAICHI's Portfolio</h1>
         <p class="effect-fade__text">Thank you for visiting this page.</p>
@@ -26,12 +26,12 @@
             <a href="#"><span></span><span></span><span></span>Scroll</a>
             <!-- <a href="#">Scroll</a><span></span> -->
           </div>
-    </section>
+    </div>
 <!-- Header -->
   <header id="Header" class="Header">
       <nav>
         <ul class="Header-inner">
-          <li class="Header-inner__list"><a href="#About">ABOUT</a></li>
+          <li class="Header-inner__list highlight"><a href="#About">ABOUT</a></li>
           <li class="Header-inner__list"><a href="#Service">SERVICE</a></li>
           <li class="Header-inner__list"><a href="#Work">WORK</a></li>
           <li class="Header-inner__list"><a href="#Price">PRICE</a></li>
@@ -90,7 +90,7 @@
       </div> 
     </section>
 <!-- Service -->
-    <setion id="Service" class="Service">
+    <section id="Service" class="Service">
       <div class="content-block fadeIn">
         <h2 class="section-title">Service</h2>
         <div class="Service__block">
@@ -146,7 +146,7 @@
           </div>
         </div>
       </div>
-    </setion>
+    </section>
 <!-- Work -->
     <section id="Work" class="Work">
       <div class="content-block fadeIn">
@@ -181,40 +181,80 @@
             </li>
             <li class="work__capture-img"><a href="#"><img src="img/iSARA.jpg" alt="iSaraサイトの模写キャプチャ"></a>
               <div class="caption">
-                      <div class="modal-link open">
-                        <p>バンコクのエンジニア育成講座「iSara」のサイト模写です。（画像データ）。</p>
-                      </div>
-                      <div class="overlay"></div>
-                      <div class="modal-window">
-                        <a href="img/iSaraPC.pdf" target="blank">PCver.</a>
-                        <a href="img/iSaraSP.pdf" target="blank">SPver.</a>
-                        <p class="close modal-switch">Close</p>
+                <div class="modal-link open">
+                  <p>伊藤大地のポートフォリオサイトです。</p>
+              </div>
+                <div class="overlay"></div>
+                  <div class="modal-window">
+                    <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
+                    <div class="modal-window__text">
+                        <div class="modal-window__about">
+                            <p>【used language】</p>
+                            <p>HTML / css・sass / JavaScript・jQuery</p>
+                        </div>
+                        <div class="modal-window__about">
+                            <p>【used tool】</p>
+                            <p>vscode / AdobeXD</p>
+                        </div>
+                        <div class="modal-window__about">
+                            <p>【Description】</p>
+                            <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
+                        </div>
                     </div>
+                    <p class="close modal-switch">Close</p>
+                  </div>
               </div>
             </li>
             <li class="work__capture-img"><a href="#"><img src="img/PAS-POL.jpg" alt="PAS=POLサイトの模写キャプチャ"></a>
               <div class="caption">
-                  <div class="modal-link open">
-                      <p>世界一周団体TABIPPOのモノづくりブランドPAS-POLのサイト模写です。</p>
-                  </div>
-                    <div class="overlay"></div>
-                    <div class="modal-window">
-                        <a href="img/Pas-PolPC.pdf" target="blank">PCver.</a>
-                        <a href="img/Pas-PolSP.pdf" target="blank">SPver.</a>
-                        <p class="close modal-switch">Close</p>
+                <div class="modal-link open">
+                  <p>伊藤大地のポートフォリオサイトです。</p>
+              </div>
+                <div class="overlay"></div>
+                  <div class="modal-window">
+                    <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
+                    <div class="modal-window__text">
+                        <div class="modal-window__about">
+                            <p>【used language】</p>
+                            <p>HTML / css・sass / JavaScript・jQuery</p>
+                        </div>
+                        <div class="modal-window__about">
+                            <p>【used tool】</p>
+                            <p>vscode / AdobeXD</p>
+                        </div>
+                        <div class="modal-window__about">
+                            <p>【Description】</p>
+                            <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
+                        </div>
                     </div>
+                    <p class="close modal-switch">Close</p>
+                  </div>
               </div>
             </li>
             <li class="work__capture-img"><a href="#"><img src="img/corporate.jpg" alt="コーポレイトサイトのキャプチャ"></a>
               <div class="caption">
-                  <div class="modal-link open">
-                      <p>仮想のコーポレートサイトです。</p>
-                  </div>
-                    <div class="overlay"></div>
-                    <div class="modal-window">
-                        <a href="https://03daichi18.github.io/corporateA/" target="blank">クリック</a>
-                        <p class="close modal-switch">Close</p>
+                <div class="modal-link open">
+                  <p>伊藤大地のポートフォリオサイトです。</p>
+              </div>
+                <div class="overlay"></div>
+                  <div class="modal-window">
+                    <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
+                    <div class="modal-window__text">
+                        <div class="modal-window__about">
+                            <p>【used language】</p>
+                            <p>HTML / css・sass / JavaScript・jQuery</p>
+                        </div>
+                        <div class="modal-window__about">
+                            <p>【used tool】</p>
+                            <p>vscode / AdobeXD</p>
+                        </div>
+                        <div class="modal-window__about">
+                            <p>【Description】</p>
+                            <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
+                        </div>
                     </div>
+                    <p class="close modal-switch">Close</p>
+                  </div>
               </div>
             </li>
           </ul>
