--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <main>
 <!-- About -->
     <section id="About" class="About">
-      <div class="content-block fadeIn">
+      <div class="content-block fadeInopacity">
         <h2 class="section-title">ABOUT</h2>
         <div class="About-flex">
           <div class="About-flex__photo">
@@ -149,7 +149,7 @@
     </section>
 <!-- Work -->
     <section id="Work" class="Work">
-      <div class="content-block fadeIn">
+      <div class="content-block fadeInopacity">
           <h2 class="section-title">Work</h2>
           <p class="Work__text">日々新しい技術を学習中です。内容は随時更新していく予定です。</p>
           <ul class="Work__capture">
@@ -158,6 +158,7 @@
                 <div class="modal-link open">
                     <p>伊藤大地のポートフォリオサイトです。</p>
                 </div>
+                <div class="overray"></div>
                     <div class="modal-window">
                       <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
                       <div class="modal-window__text">
@@ -183,6 +184,7 @@
                 <div class="modal-link open">
                   <p>伊藤大地のポートフォリオサイトです。</p>
               </div>
+              <div class="overray"></div>
                   <div class="modal-window">
                     <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
                     <div class="modal-window__text">
@@ -208,6 +210,7 @@
                 <div class="modal-link open">
                   <p>伊藤大地のポートフォリオサイトです。</p>
               </div>
+              <div class="overray"></div>
                   <div class="modal-window">
                     <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
                     <div class="modal-window__text">
@@ -233,6 +236,7 @@
                 <div class="modal-link open">
                   <p>伊藤大地のポートフォリオサイトです。</p>
               </div>
+              <div class="overray"></div>
                   <div class="modal-window">
                     <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
                     <div class="modal-window__text">
@@ -301,7 +305,7 @@
     </section>
 <!-- Contact -->
     <section id="Contact" class="Contact">
-      <div class="content-block fadeIn">
+      <div class="content-block fadeInopacity">
         <h2 class="section-title">Contact</h2>
         <div class="Contact__text">
           <p>最後までご覧いただきありがとうございました。</p>
