モーダル背景固定のパターンチェンジ

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DAICHI Portfolio</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css">
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="js/script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DAICHI Portfolio</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
 <!-- TopVisual -->
@@ -158,7 +158,7 @@
                 <div class="modal-link open">
                     <p>伊藤大地のポートフォリオサイトです。</p>
                 </div>
-                <div class="overray"></div>
+                <div class="overlay"></div>
                 <div class="modal-window">
                   <div class="modal-switch">
                     <a class="modal-switch__btn" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
@@ -188,8 +188,8 @@
               <div class="caption">
                 <div class="modal-link open">
                   <p>iSara.life模写製作LP</p>
-              </div>
-                  <div class="overray"></div>
+                </div>
+                  <div class="overlay"></div>
                   <div class="modal-window">
                     <div class="modal-switch">
                       <a class="modal-switch__btn" href="img/PC iSara.life模写製作LP.pdf" target="blank">PC image</a>
@@ -222,7 +222,7 @@
                 <div class="modal-link open">
                   <p>PAS-POL模写製作</p>
               </div>
-                  <div class="overray"></div>
+                  <div class="overlay"></div>
                   <div class="modal-window">
                     <div class="modal-switch">
                         <a class="modal-switch__btn" href="img/Pas-PolPC.pdf" target="blank">PC image</a>
@@ -254,7 +254,7 @@
                 <div class="modal-link open">
                   <p>仮想のコーポレートサイト</p>
               </div>
-              <div class="overray"></div>
+              <div class="overlay"></div>
                   <div class="modal-window">
                     <div class="modal-switch">
                       <a class="modal-switch__btn" href="https://03daichi18.github.io/corporateA/" target="blank">Site Link</a>
@@ -282,7 +282,7 @@
             </li>
           </ul>
           <div class="link">
-              <a class="link-button" href="#">MORE...
+              <a class="link-button" href="work.html" target="blank">MORE...
                   <div class="border"></div>
                   <div class="border"></div>
               </a>
