PAS-POL画像データPDF→jpg

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <p>【Description】</p>
                             <a href=" https://isara.life" target="blank">リンク先</a>
                             <p>iSara.lifeのLP模写です。（著作権の関係で作品は画像データとしています）</p>
-                            <p>全体ボリュームも多く、LPにおける汎用的なデザインも沢山ありましたので、多くのことを学べました。レスポンシブでコーディングを行い、スクロールトップやアコーディオンメニューはjQueryで実装しています。</p>
+                            <p>全体ボリュームも多く、LPにおける汎用的なデザインも沢山あり多くのことを学べました。レスポンシブでコーディングを行い、スクロールトップやアコーディオンメニューはjQueryで実装しています。</p>
                         </div>
                     </div>
                     <div class="modal-switch">
@@ -224,8 +224,8 @@
                   <div class="overlay"></div>
                   <div class="modal-window">
                     <div class="modal-switch">
-                        <a class="modal-switch__btn" href="img/Pas-PolPC.pdf" target="blank">PC image</a>
-                        <a class="modal-switch__btn" href="img/Pas-PolSP.pdf" target="blank">SP image</a>
+                        <a class="modal-switch__btn" href="img/Pas-PolPC.jpg" target="blank">PC image</a>
+                        <a class="modal-switch__btn" href="img/Pas-PolSP.jpg" target="blank">SP image</a>
                     </div>
                     <div class="modal-window__text">
                         <div class="modal-window__about">
@@ -238,8 +238,9 @@
                         </div>
                         <div class="modal-window__about">
                             <p>【Description】</p>
+                            <a href="https://pas-pol.jp/" target="blank">リンク先</a>
                             <p>PAS-POLのLP模写です。（著作権の関係で作品は画像データとしています）</p>
-                            <p>トップビジュアルでは画像が自動でフェードイン・アウトで切り替わるスライドショー、スマートフォン以下のサイズで画面上部に出るハンバーガーメニューなど、jQueryで実装しています。作品の画像一覧はグリッドレイアウトで並べています。</p>
+                            <p>画像が自動的にフェードイン・アウトで切り替わるスライドショー、スマートフォン以下のサイズで画面上部に出るハンバーガーメニューなどjQueryで実装しています。PC版の一部はCSSのグリットレイアウトで配置しています。</p>
                         </div>
                     </div>
                     <div class="modal-switch">
