iSara画像データPDF→png

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                   <div class="overlay"></div>
                   <div class="modal-window">
                     <div class="modal-switch">
-                      <a class="modal-switch__btn" href="img/PC iSara.life模写製作LP.pdf" target="blank">PC image</a>
-                      <a class="modal-switch__btn" href="img/SP iSara.life模写製作LP.pdf" target="blank">SP image</a>
+                      <a class="modal-switch__btn" href="img/PC iSara.life模写製作LP.png" target="blank">PC image</a>
+                      <a class="modal-switch__btn" href="img/SP iSara.life模写製作LP.png" target="blank">SP image</a>
                     </div>
                     <div class="modal-window__text">
                         <div class="modal-window__about">
