--- a/work.html
+++ b/work.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DAICHI Portfolio</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="./css/base/reset.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="./js/work.js"></script>
       </head>
 <body>
     <section id="Work" class="Work">
-        <div class="content-block">
+        <div class="content-block fadeInopacity">
             <h2 class="section-title">Work</h2>
             <p class="Work__text">日々新しい技術を学習中です。内容は随時更新します。</p>
             <div class="link">
