workフェードイン修正

--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
       </head>
 <body>
     <section id="Work" class="Work">
-        <div class="content-block fadeInopacity">
+        <div class="content-block">
             <h2 class="section-title">Work</h2>
             <p class="Work__text">日々新しい技術を学習中です。内容は随時更新します。</p>
             <div class="link">
