ページ遷移にフェードインさせるクラスをworkに追加

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
 <!-- Work -->
     <section id="Work" class="Work">
-      <div class="content-block">
+      <div class="content-block content-block__page">
           <h2 class="section-title">Work</h2>
           <p class="Work__text">日々新しい技術を学習中です。内容は随時更新します。</p>
           <ul class="Work__capture">
@@ -286,7 +286,7 @@
                   <div class="border"></div>
                   <div class="border"></div>
               </a>
-            </div>
+          </div>
       </div>
     </section>
 <!-- Price -->
@@ -334,7 +334,7 @@
           <p>最後までご覧いただきありがとうございました。</p>
           <p>お仕事のご依頼、ご質問等ございましたら下記フォームか、TwitterのDMからお気軽にお声掛けください。</p>
         </div>
-          <form class="Contact__area" action="confirm.php" method="post">
+          <form class="Contact__area" action="php/mailform.php" method="post">
             <div class="Contact__block Contact__block-name">
                 <label class="label" for="name">氏名（会社名）：</label>
                 <input id="name" class="inputs" type="text" name="name" placeholder="山田太郎">
