コンタクトフォーム実装完了、PCサイズのみレイアウト変更

--- a/index.html
+++ b/index.html
@@ -334,27 +334,60 @@
           <p>最後までご覧いただきありがとうございました。</p>
           <p>お仕事のご依頼、ご質問等ございましたら下記フォームか、TwitterのDMからお気軽にお声掛けください。</p>
         </div>
-          <form class="Contact__area" action="php/mailform.php" method="post">
-            <div class="Contact__block Contact__block-name">
-                <label class="label" for="name">氏名（会社名）：</label>
-                <input id="name" class="inputs" type="text" name="name" placeholder="山田太郎">
-            </div>
-            <div class="Contact__block Contact__block-mail">
-                <label class="label" for="mail">メールアドレス：</label>
-                <input id="mail" class="inputs" type="email" name="mail" placeholder="○○○＠△△.△△">
-            </div>
-            <div class="Contact__block Contact__block-message">
-                <label class="label" for="comment">メッセージ：</label>
-                <textarea id="comment" class="textarea" name="comment" placeholder="ここには自由にコメントを記入してください"></textarea>
-            </div>
-            <div class="Contact__block Contact__block-btn">
-                <input class="Contact__block-send" type="submit" value="送信">
+
+        <form action="mailform/php/mailform.php" method="post" id="mail_form" class="Contact__area">
+
+          <div class="Contact__area-left">
+              <div class="Contact__block  Contact__block-name">
+                <label class="label">会社名<span>Company Name</span></label>
+                <input class="inputs" type="text" id="company" name="company" value="" />
+              </div>
+              <div class="Contact__block Contact__block-name">
+                <label class="label">名前<span>Your Name</span></label>
+                <input class="inputs" type="text" id="name_1" name="name_1" value="" />
+              </div>
+              <div class="Contact__block Contact__block-name">
+                <label class="label">ふりがな<span>Name Reading</span></label>
+                <input class="inputs" type="text" id="read_1" name="read_1" value="" />
+              </div>
+              <div class="Contact__block Contact__block-mail">
+                <label class="label">メールアドレス<span>Mail Address</span></label>
+                <input class="inputs" type="email" id="mail_address" name="mail_address" value="" />
+              </div>
+              <div class="Contact__block Contact__block-mail">
+                <label class="label">(確認用)メールアドレス<span>Mail Address Confirm</span></label>
+                <input class="inputs" type="email" id="mail_address_confirm" name="mail_address_confirm" value="" />
+              </div>
+          </div>
+          <div class="Contact__area-right">
+              <div class="Contact__block Contact__block-message">
+                <label class="label">お問い合わせ内容<span>Contents</span></label>
+                <textarea id="contents" class="textarea" name="contents"></textarea>
+              </div>
+              <div  class="Contact__block Contact__block-btn">
+                <p id="form_submit"><input class="Contact__block-send" type="button" id="form_submit_button" value="送信する" /></p>
                 <input class="Contact__block-reset" type="reset" value="リセット">
                 <div class="Contant__sns">
-                  <a href="https://twitter.com/18__DAiCHi" target="blank"><i class="fab fa-twitter-square fa-2x faa-horizontal animated-hover"></i></a>
+                    <a href="https://twitter.com/18__DAiCHi" target="blank"><i class="fab fa-twitter-square fa-2x faa-horizontal animated-hover"></i></a>
                 </div>
-            </div>
-          </form>
+              </div>
+          </div>
+        </form>
+
+        <script src="mailform/js/mailform-js.php"></script>
+        <!-- フリガナ自動入力ライブラリここから -->
+        <script src="mailform/js/jquery.autoKana.js"></script>
+        <script>
+          (function( $ ) {
+            $.fn.autoKana( '#name_1', '#read_1', {
+              katakana: false
+            });
+            $.fn.autoKana( '#name_2', '#read_2', {
+              katakana: false
+            });
+          })( jQuery );
+        </script>
+        <!-- フリガナ自動入力ライブラリここまで -->
       </div>
     </section>
   </main>
