--- a/index.html
+++ b/index.html
@@ -159,28 +159,30 @@
                 </div>
                 <div class="overlay"></div>
                 <div class="modal-window">
-                  <div class="modal-switch">
-                    <a class="modal-switch__btn" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
-                  </div>
-                    <div class="modal-window__text">
-                        <div class="modal-window__about">
-                            <p>【used language】</p>
-                            <p>HTML / css・sass / JavaScript・jQuery</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【used tool】</p>
-                            <p>vscode / AdobeXD</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【Description】</p>
-                            <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。全体は保守性を高めるためにSassで管理しています。</p>
-                            <p>トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
-                        </div>
-                    </div>
+                  <div class="modal-window__wrap">
                     <div class="modal-switch">
-                      <a class="close modal-switch__btn">Close</a>
+                      <a class="modal-switch__btn" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
                     </div>
+                      <div class="modal-window__text">
+                          <div class="modal-window__about">
+                              <p>【used language】</p>
+                              <p>HTML / css・sass / JavaScript・jQuery</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【used tool】</p>
+                              <p>vscode / AdobeXD</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【Description】</p>
+                              <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。全体は保守性を高めるためにSassで管理しています。</p>
+                              <p>トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
+                          </div>
+                      </div>
+                      <div class="modal-switch">
+                        <a class="close modal-switch__btn">Close</a>
+                      </div>
                   </div>
+                </div>
               </div>
             </li>
             <li class="work__capture-img"><a href="#"><img src="img/iSARA.jpg" alt="iSaraサイトの模写キャプチャ"></a>
@@ -190,28 +192,30 @@
                 </div>
                   <div class="overlay"></div>
                   <div class="modal-window">
-                    <div class="modal-switch">
-                      <a class="modal-switch__btn" href="img/PC iSara.life模写製作LP.jpg" target="blank">PC image</a>
-                      <a class="modal-switch__btn" href="img/SP iSara.life模写製作LP.jpg" target="blank">SP image</a>
-                    </div>
-                    <div class="modal-window__text">
-                        <div class="modal-window__about">
-                            <p>【used language】</p>
-                            <p>HTML / css / JavaScript・jQuery</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【used tool】</p>
-                            <p>vscode</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【Description】</p>
-                            <a href=" https://isara.life" target="blank">リンク先</a>
-                            <p>iSara.lifeのLP模写です。（著作権の関係で作品は画像データとしています）</p>
-                            <p>全体ボリュームも多く、LPにおける汎用的なデザインも沢山あり多くのことを学べました。レスポンシブでコーディングを行い、スクロールトップやアコーディオンメニューはjQueryで実装しています。</p>
-                        </div>
-                    </div>
-                    <div class="modal-switch">
-                      <a class="close modal-switch__btn">Close</a>
+                    <div class="modal-window__wrap">
+                      <div class="modal-switch">
+                        <a class="modal-switch__btn" href="img/PC iSara.life模写製作LP.jpg" target="blank">PC image</a>
+                        <a class="modal-switch__btn" href="img/SP iSara.life模写製作LP.jpg" target="blank">SP image</a>
+                      </div>
+                      <div class="modal-window__text">
+                          <div class="modal-window__about">
+                              <p>【used language】</p>
+                              <p>HTML / css / JavaScript・jQuery</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【used tool】</p>
+                              <p>vscode</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【Description】</p>
+                              <a href=" https://isara.life" target="blank">リンク先</a>
+                              <p>iSara.lifeのLP模写です。（著作権の関係で作品は画像データとしています）</p>
+                              <p>全体ボリュームも多く、LPにおける汎用的なデザインも沢山あり多くのことを学べました。レスポンシブでコーディングを行い、スクロールトップやアコーディオンメニューはjQueryで実装しています。</p>
+                          </div>
+                      </div>
+                      <div class="modal-switch">
+                        <a class="close modal-switch__btn">Close</a>
+                      </div>
                     </div>
                   </div>
               </div>
@@ -223,28 +227,30 @@
               </div>
                   <div class="overlay"></div>
                   <div class="modal-window">
-                    <div class="modal-switch">
-                        <a class="modal-switch__btn" href="img/Pas-PolPC.jpg" target="blank">PC image</a>
-                        <a class="modal-switch__btn" href="img/Pas-PolSP.jpg" target="blank">SP image</a>
-                    </div>
-                    <div class="modal-window__text">
-                        <div class="modal-window__about">
-                            <p>【used language】</p>
-                            <p>HTML / css / JavaScript・jQuery</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【used tool】</p>
-                            <p>vscode</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【Description】</p>
-                            <a href="https://pas-pol.jp/" target="blank">リンク先</a>
-                            <p>PAS-POLのLP模写です。（著作権の関係で作品は画像データとしています）</p>
-                            <p>画像が自動的にフェードイン・アウトで切り替わるスライドショー、スマートフォン以下のサイズで画面上部に出るハンバーガーメニューなどjQueryで実装しています。PC版の一部はCSSのグリットレイアウトで配置しています。</p>
-                        </div>
-                    </div>
-                    <div class="modal-switch">
-                      <a class="close modal-switch__btn">Close</a>
+                    <div class="modal-window__wrap">
+                      <div class="modal-switch">
+                          <a class="modal-switch__btn" href="img/Pas-PolPC.jpg" target="blank">PC image</a>
+                          <a class="modal-switch__btn" href="img/Pas-PolSP.jpg" target="blank">SP image</a>
+                      </div>
+                      <div class="modal-window__text">
+                          <div class="modal-window__about">
+                              <p>【used language】</p>
+                              <p>HTML / css / JavaScript・jQuery</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【used tool】</p>
+                              <p>vscode</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【Description】</p>
+                              <a href="https://pas-pol.jp/" target="blank">リンク先</a>
+                              <p>PAS-POLのLP模写です。（著作権の関係で作品は画像データとしています）</p>
+                              <p>画像が自動的にフェードイン・アウトで切り替わるスライドショー、スマートフォン以下のサイズで画面上部に出るハンバーガーメニューなどjQueryで実装しています。PC版の一部はCSSのグリットレイアウトで配置しています。</p>
+                          </div>
+                      </div>
+                      <div class="modal-switch">
+                        <a class="close modal-switch__btn">Close</a>
+                      </div>
                     </div>
                   </div>
               </div>
@@ -256,26 +262,28 @@
               </div>
               <div class="overlay"></div>
                   <div class="modal-window">
-                    <div class="modal-switch">
-                      <a class="modal-switch__btn" href="https://03daichi18.github.io/corporateA/" target="blank">Site Link</a>
-                    </div>
-                    <div class="modal-window__text">
-                        <div class="modal-window__about">
-                            <p>【used language】</p>
-                            <p>HTML / css / JavaScript・jQuery</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【used tool】</p>
-                            <p>vscode</p>
-                        </div>
-                        <div class="modal-window__about">
-                            <p>【Description】</p>
-                            <p>下町の町工場を営んでいる会社を想定したシンプルなコーポレートサイトです。</p>
-                            <p>ノングリッドデザインを採用しています。CSSを用いて背景色や画像はセピア調に変えています。スマートフォンの画面サイズにするとハンバーガーメニューに変化するヘッダーメニューはjQueryで実装しています。</p>
-                        </div>
-                    </div>
-                    <div class="modal-switch">
-                      <a class="close modal-switch__btn">Close</a>
+                    <div class="modal-window__wrap">
+                      <div class="modal-switch">
+                        <a class="modal-switch__btn" href="https://03daichi18.github.io/corporateA/" target="blank">Site Link</a>
+                      </div>
+                      <div class="modal-window__text">
+                          <div class="modal-window__about">
+                              <p>【used language】</p>
+                              <p>HTML / css / JavaScript・jQuery</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【used tool】</p>
+                              <p>vscode</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【Description】</p>
+                              <p>下町の町工場を営んでいる会社を想定したシンプルなコーポレートサイトです。</p>
+                              <p>ノングリッドデザインを採用しています。CSSを用いて背景色や画像はセピア調に変えています。スマートフォンの画面サイズにするとハンバーガーメニューに変化するヘッダーメニューはjQueryで実装しています。</p>
+                          </div>
+                      </div>
+                      <div class="modal-switch">
+                        <a class="close modal-switch__btn">Close</a>
+                      </div>
                     </div>
                   </div>
               </div>
