ヘッダー色変化の装飾を削除

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header id="Header" class="Header">
       <nav>
         <ul class="Header-inner">
-          <li class="Header-inner__list highlight"><a href="#About">ABOUT</a></li>
+          <li class="Header-inner__list"><a href="#About">ABOUT</a></li>
           <li class="Header-inner__list"><a href="#Service">SERVICE</a></li>
           <li class="Header-inner__list"><a href="#Work">WORK</a></li>
           <li class="Header-inner__list"><a href="#Price">PRICE</a></li>
