metaタグ設定、Skill幅調整

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAICHI Portfolio</title>
-    <link rel="stylesheet" href="css/base/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="js/script.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="description" content="伊藤大地のポートフォリオサイトです。福岡在住、週末フリーランスとして個人でWEBサイト製作（HP製作、LP製作）を行っています。">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@18__DAiCHi">
+  <meta property="og:url" content="https://daichito.com">
+  <meta property="og:title" content="DAICHI Portfolio">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="DAICHIのポートフォリオサイトです。福岡在住、WEBサイト製作（HP製作、LP製作）を行っています。">
+  <meta property="og:image" content="https://daichito.com/img/Portfolio.png">
+  <title>DAICHI Portfolio</title>
+
+  <link rel="stylesheet" href="css/base/reset.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
 
@@ -48,7 +59,7 @@
         <h2 class="section-title">ABOUT</h2>
         <div class="About-flex">
           <div class="About-flex__photo">
-            <figure><img src="img/selfphoto.jpeg" alt="自己紹介写真"></figure>
+            <figure><img src="img/SelfPhoto.jpg" alt="自己紹介写真"></figure>
           </div>
           <div class="About-flex__text">
             <p class="About-flex__text--name">伊藤　大地　／　Itou　Daichi</p>
@@ -56,7 +67,7 @@
           </div>
         </div>
         <div class="About__theme">
-          <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
+          <p>福岡在住、週末フリーランスとして個人でWEBサイト製作（HP製作、LP製作）を行っています。</p>
           <div class="About__theme-history">
             <p>略歴</p>
             <table>
@@ -73,8 +84,12 @@
                 <td>グループ会社の立ち上げに出向し、太陽光パネルの訪問営業を経験。</td>
               </tr>
               <tr>
-                <td class="year">2015年〜</td>
+                <td class="year">2015年</td>
                 <td>社内のコールセンター事業立ち上げに参画。管理運営サイドにシフトチェンジし、チームのマネジメント業務がメインに。</td>
+              </tr>
+              <tr>
+                <td class="year">2019年〜</td>
+                <td>個人でWEB製作の活動を開始。より良いサービスを発信できるように、コーディングだけでなく、デザインやマーケティングも勉強中。</td>
               </tr>
             </table>
           </div>
@@ -130,7 +145,7 @@
                 <i class="fab fa-html5"></i>
                 <p>HTML</p>
               </div>
-                <p class="skill__container-about">検索エンジン最適化（検索で上位に表示させる）を意識したセマンティックなマークアップを行います。</p>
+                <p class="skill__container-about">検索エンジン最適化を意識したセマンティックなマークアップを行います。</p>
             </div>
             <div class="skill__container-contents">
                 <div class="skill__container-title">
@@ -144,7 +159,7 @@
                   <i class="fab fa-js-square"></i>
                   <p>JavaScript・jQuery</p>
                 </div>
-              <p class="skill__container-about">クリックでメニューが開閉するアコーディオンメニューや、写真のスライドショーなど動きのあるサイト作成も可能です。</p>
+              <p class="skill__container-about">クリックでメニューが開閉するアコーディオンメニューや、写真のスライドショーなど、動きのあるサイト作成も可能です。</p>
             </div>
           </div>
         </div>
@@ -213,8 +228,8 @@
           </div>
           <div class="modal-window__about">
               <p>【Description】</p>
-              <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。全体は保守性を高めるためにSassで管理しています。</p>
-              <p>トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
+              <p>テンプレートやjsプラグインを使用せずに、デザイン含め一から作成しました。全体は保守性を高めるためにSassで管理しています。</p>
+              <p>トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。</p>
           </div>
       </div>
       <div class="modal-switch">
