--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <!-- ファビコン -->
+  <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+  <!-- description　Twitterカード -->
   <meta name="description" content="伊藤大地のポートフォリオサイトです。福岡在住、週末フリーランスとして個人でWEBサイト製作（HP製作、LP製作）を行っています。">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@18__DAiCHi">
